--- a/src/pages/faq-detail.pug
+++ b/src/pages/faq-detail.pug
@@ -7,7 +7,7 @@ block content
     include ../blocks/components/card-question/card-question
     include ../blocks/components/breadcrumbs/breadcrumbs
     include ../blocks/components/banners/banners
-    include ../data/faq
+    include ../data/faq-detail
 
     main.section-gray
         .container
@@ -18,7 +18,10 @@ block content
                     include ../blocks/components/question/question
                 .section__sidebar
                     include ../blocks/components/banner-ask-question/banner-ask-question
-
+            h2.h2 Другие вопросы пользователей Honda HR-V 
+            .card-question-list.card-question-list_3-col
+                for question in questions
+                    +card-question(question.auto, question.title, question.hasAnswer)               
             +banners()
 
 
