--- a/src/blocks/components/button/button.pug
+++ b/src/blocks/components/button/button.pug
@@ -21,9 +21,17 @@ h3.h3  Популярное
 
 
 
+.modal
+    .modal__close
+    h1.modal__h1 Задать вопрос
+    .modal__text 
+        |Не нашлось нужной публикации? 
+        |Специалисты готовы поделиться своими знаниями. Спрашивай!
+    .modal__text Ваш автомобиль    
 
 
 
 
 
-
+input.checkbox(name="agree" type="checkbox")
+span.checkbox-custom
