Added share and favorite

--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -25,4 +25,5 @@
 @import "404-center/404-center";
 @import "modals/modals";
 @import "share/share";
+@import "share-list/share-list";
 @import "question/question";
