--- a/src/blocks/components/article-detail/article-detail.pug
+++ b/src/blocks/components/article-detail/article-detail.pug
@@ -91,4 +91,10 @@ section.article-detail
 
                 li Как было упомянуто выше, такой способ также имеет право на существование, однако в силу его малого удобства и трудовых и временных затрат его редко используют.
 
+        .article-content
+            .article-bottom
+                a(href="javascript:void(0)").add-to-favorite.js-add-to-favorite Добавить в избранное
+                a(href="javascript:void(0)").remind-me Напомнить мне
+                include ../../components/share-list/share-list
+
 
