--- a/src/blocks/components/article-detail/_article-detail.scss
+++ b/src/blocks/components/article-detail/_article-detail.scss
@@ -78,5 +78,11 @@
             }
         }
     }
+}
 
+.article-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 35px;
 }
