--- a/src/views/includes/head.pug
+++ b/src/views/includes/head.pug
@@ -14,4 +14,9 @@ link(rel="apple-touch-icon" sizes="120x120" href="./img/favicons/apple-touch-ico
 link(rel="apple-touch-icon" sizes="144x144" href="./img/favicons/apple-touch-icon-144x144.png")
 link(rel="apple-touch-icon" sizes="152x152" href="./img/favicons/apple-touch-icon-152x152.png")
 link(rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon-180x180.png")
+
+block head-links
+    script(src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js")
+    script(src="//yastatic.net/share2/share.js")
+
 link(rel="stylesheet" href="./styles/main.css")
