--- a/src/blocks/components/article-detail/article-detail.pug
+++ b/src/blocks/components/article-detail/article-detail.pug
@@ -94,7 +94,7 @@ section.article-detail
         .article-content
             .article-bottom
                 a(href="javascript:void(0)").add-to-favorite.js-add-to-favorite Добавить в избранное
-                a(href="javascript:void(0)").remind-me Напомнить мне
+                a(href="javascript:void(0)").remind-me.js-remind-me Напомнить мне
                 include ../../components/share-list/share-list
 
 
