--- a/src/blocks/components/button/button.pug
+++ b/src/blocks/components/button/button.pug
@@ -35,3 +35,9 @@ h3.h3  Популярное
 
 input.checkbox(name="agree" type="checkbox")
 span.checkbox-custom
+
+
+
+section.comments
+    .comments__inner
+    
