--- a/src/blocks/components/search/_search.scss
+++ b/src/blocks/components/search/_search.scss
@@ -10,6 +10,10 @@
     display: flex;
     padding: 6px 6px 6px 40px;
 
+    @include sm-block {
+      height: 36px;
+    }
+
     &:not(.search__icon) {
       padding: 6px 6px 6px 15px;
 
@@ -39,7 +43,11 @@
       color: $search-input-text;
       outline: none;
       background: $search-bgc;
-      padding: 0;
+      padding: 0 6px 0 0;
+
+      @include sm-block {
+        font-size: 16px;
+      }
     }
 
     & button {
@@ -50,6 +58,12 @@
       background: $search-button-bgc;
       padding: 4px 30px;
       box-sizing: border-box;
+
+      @include sm-block {
+        font-size: 14px;
+        padding-right: 15px;
+        padding-left: 15px;
+      }
     }
   }
 }
