--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -16,5 +16,5 @@ html(lang="ru")
 				block content
 
 			block footer
-				include ../../blocks/modules/footer/footer
+				//include ../../blocks/modules/footer/footer
 		include ../includes/scripts
