Done adaptive home, search pages

--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -1,6 +1,8 @@
 @import "logo/logo";
 @import "button/button";
+@import "menu/menu";
 @import "sub-menu/sub-menu";
+@import "mobile-menu/mobile-menu";
 @import "search/search";
 @import "hint/hint";
 @import "card/card";
@@ -23,7 +25,6 @@
 @import "select/select";
 @import "ledger/ledger";
 @import "404-center/404-center";
-@import "modals/modals";
 @import "share/share";
 @import "share-list/share-list";
 @import "question/question";
