--- a/src/blocks/components/filter-main/_filter-main.scss
+++ b/src/blocks/components/filter-main/_filter-main.scss
@@ -6,6 +6,10 @@
   padding-top: 44px;
   padding-bottom: 60px;
   box-sizing: border-box;
+  @include md-block {
+    padding-top: 20px;
+    padding-bottom: 45px;
+  }
 
   &__title {
     font-weight: 500;
@@ -14,6 +18,9 @@
     text-align: center;
     color: $white;
     padding: 0 25px;
+    @include md-block {
+      font-size: 28px;
+    }
   }
 
   &__content {
@@ -21,6 +28,15 @@
     justify-content: space-between;
     align-items: flex-start;
     margin-top: 55px;
+    @include lg-block {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    @include md-block {
+      margin-top: 20px;
+    }
 
     & .car-selection {
       display: inline-block;
@@ -38,6 +54,15 @@
     border-radius: 8px;
     padding: 30px 40px 60px;
     margin-left: 85px;
+    @include lg-block {
+      max-width: 626px;
+      margin-left: 0;
+      margin-top: 46px;
+    }
+    @include sm-block {
+      padding: 20px 12px 25px;
+    }
+
 
     &:before {
       content: 'или';
@@ -46,6 +71,15 @@
       font-weight: 500;
       font-size: 18px;
       color: $white;
+
+      @include lg-block {
+        left: 0;
+        right: 0;
+        bottom: auto;
+        top: -36px;
+        margin: auto;
+        text-align: center;
+      }
 
     }
 
