--- a/src/blocks/components/filter-search/filter-search.pug
+++ b/src/blocks/components/filter-search/filter-search.pug
@@ -36,7 +36,8 @@ include ../personal-auto/personal-auto
         .filter-search__left
             +personal-auto('Mazda 323 III (BF) 1985 - 1989', true)
         .filter-search__right
-            a(href="javascript:void(0)").filter-search__edit.js-filter-search-edit Изменить параметры поиска
+            a(href="javascript:void(0)").filter-search__edit.js-filter-search-edit
+                span Изменить параметры поиска
 
     form.filter-search__form.js-filter-search-form.hide
         .filter-search__form-top
