--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -3,3 +3,4 @@
 @import "main/main";
 @import "marks-and-models/marks-and-models";
 @import "personal-area/personal-area";
+@import "modals/modals";
