--- a/src/blocks/modules/footer/footer.pug
+++ b/src/blocks/modules/footer/footer.pug
@@ -2,22 +2,7 @@ footer.footer
     .container
         .footer__top
             .footer__hulf
-                ul.footer__menu
-                    li
-                        a(href="#") Ремонт автомобиля
-                    li
-                        a(href="#") Техобслуживание
-                    li
-                        a(href="#") Расходные материалы
-                ul.footer__sub-menu
-                    li
-                        a(href="#") Все материалы
-                    li
-                        a(href="#") Автомобили
-                    li
-                        a(href="#") Вопрос/ответ
-                    li
-                        a(href="#") О нас
+                include footer-menu
             .footer__hulf
                 include ../../components/social/social
         .footer__bottom
