--- a/src/styles/helpers/_ui-kit.scss
+++ b/src/styles/helpers/_ui-kit.scss
@@ -47,3 +47,11 @@
         }
     }
 }
+
+.link {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    color: $blue;
+    text-decoration: none;
+}
