--- a/src/blocks/components/article-detail/_article-detail.scss
+++ b/src/blocks/components/article-detail/_article-detail.scss
@@ -6,6 +6,10 @@
         margin-top: 60px;
         justify-content: space-between;
 
+        @include  md-block {
+            margin-top: 45px;
+        }
+
         & img {
             max-width: 626px;
             margin: 0 28px 0 0;
@@ -27,6 +31,14 @@
     margin: auto;
     max-width: 844px;
     text-align: left;
+    line-height: 30px;
+
+    @include md-block {
+        padding-top: 30px;
+        box-sizing: border-box;
+        font-size: 16px;
+        line-height: 26px;
+    }
 
     & a {
         color: $dark-gray;
@@ -35,7 +47,14 @@
 
     & p {
         margin-bottom: 30px;
-        line-height: 30px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+
+        @include md-block {
+            margin-bottom: 20px;
+        }
 
         & ~ img {
             margin-top: 0;
@@ -45,6 +64,11 @@
     & h2 {
         margin-top: 50px;
         margin-bottom: 30px;
+
+        @include md-block {
+            margin-top: 25px;
+            margin-bottom: 20px;
+        }
     }
 
     & img {
@@ -62,6 +86,16 @@
             line-height: 30px;
             margin-bottom: 25px;
             padding-left: 20px;
+
+            @include md-block {
+                font-size: 16px;
+                line-height: 26px;
+                margin-bottom: 20px;
+            }
+
+            &:last-child {
+                margin-bottom: 0;
+            }
 
             &:before {
                 content: '';
@@ -84,5 +118,21 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 35px;
+
+    &__item {
+        @include sm-block {
+            margin-bottom: 25px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+    }
+
+    @include sm-block {
+        margin-top: 0;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
 }
