--- a/src/blocks/components/banners/_banners.scss
+++ b/src/blocks/components/banners/_banners.scss
@@ -2,6 +2,10 @@
   padding-top: 30px;
   padding-bottom: 55px;
 
+  @include md-block {
+    padding-bottom: 20px;
+  }
+
   &__list {
     @include row-flex();
   }
@@ -9,11 +13,18 @@
   &__item {
     @include col();
     @include size(3);
+    @include size-md(6);
     margin-left: 10px;
     margin-right: 10px;
     width: calc(25% - 20px);
     text-decoration: none;
     display: inline-block;
+    @include md-block {
+      margin-bottom: 10px;
+    }
+    @include to(425px) {
+      width: 100%;
+    }
     & img {
       width: 100%;
     }
