--- a/src/blocks/components/breadcrumbs/_breadcrumbs.scss
+++ b/src/blocks/components/breadcrumbs/_breadcrumbs.scss
@@ -2,6 +2,12 @@
     padding-top: 20px;
     margin-bottom: 25px;
     list-style-type: none;
+    @include md-block {
+        padding-top: 14px;
+        margin-bottom: 14px;
+    }
+
+
     &__link {
         text-decoration: none;
     }
