--- a/src/blocks/components/car-selection/_car-selection.scss
+++ b/src/blocks/components/car-selection/_car-selection.scss
@@ -11,6 +11,9 @@
     box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.06);
     box-sizing: border-box;
     padding: 0 30px 30px;
+    @include sm-block {
+      padding: 0 12px 20px;
+    }
   }
 
   &__top {
@@ -18,6 +21,9 @@
     justify-content: space-between;
     padding: 20px 30px 10px;
     box-sizing: border-box;
+    @include sm-block {
+      padding: 20px 12px 10px;
+    }
   }
 
   &__title {
