--- a/src/blocks/components/card/_card.scss
+++ b/src/blocks/components/card/_card.scss
@@ -3,6 +3,13 @@
   width: 100%;
   display: inline-block;
   text-decoration: none;
+  @include xl-block {
+    max-width: #{calc(50% - 20px)};
+  }
+
+  @include sm-block {
+    max-width: 100%;
+  }
 
   &__img {
     position: relative;
@@ -12,6 +19,9 @@
     background-size: cover;
     width: 100%;
     height: 200px;
+    @include xs-block {
+      height: 140px;
+    }
 
     &:before {
       content: '';
@@ -49,6 +59,14 @@
     & .card {
       @include col();
       margin-bottom: 35px;
+
+      @include md-block {
+        margin-bottom: 30px;
+      }
+
+      &:last-child {
+        margin-bottom: 0;
+      }
 
       & img {
         border-radius: 8px;
