--- a/src/blocks/components/filter-search/_filter-search.scss
+++ b/src/blocks/components/filter-search/_filter-search.scss
@@ -1,8 +1,51 @@
+@mixin filter-link() {
+  font-weight: 900;
+  font-size: 15px;
+  position: relative;
+  text-decoration: none;
+  color: $personal-auto;
+  margin-left: 25px;
+  border-bottom: 0.5px solid #ABABAB;
+  padding-bottom: 3px;
+}
+
 .filter-search {
   background-color: $yellow;
   padding: 19px 26px;
   box-sizing: border-box;
   margin-bottom: 34px;
+
+  @include md-block {
+    padding: 15px 12px;
+    margin-left: -15px;
+    margin-right: -15px;
+    margin-bottom: 20px;
+  }
+  @include sm-block {
+    margin-left: -12px;
+    margin-right: -12px;
+  }
+
+  & .personal-auto {
+    margin: auto;
+    height: auto;
+    & a {
+      background: none;
+      border: none;
+      height: auto;
+      width: auto;
+      @include filter-link;
+      margin: 0;
+
+    }
+    & span {
+      display: block;
+    }
+
+    &:before {
+      content: none;
+    }
+  }
 
   &__form {
     display: flex;
@@ -13,6 +56,11 @@
       display: flex;
       align-items: center;
       justify-content: flex-start;
+      @include sm-block {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+      }
     }
 
     &-top {
@@ -24,17 +72,34 @@
       margin-right: 20px;
       font-size: 15px;
       color: $dark-gray;
+
+      @include sm-block {
+        margin-bottom: 10px;
+      }
     }
   }
 
   &__item {
     width: #{calc(100% / 3 - 10px)};
+    @include sm-block {
+      margin-bottom: 10px;
+      width: 100%;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
 
     &-full {
       display: flex;
       max-width: 812px;
       width: 100%;
       justify-content: space-between;
+      @include sm-block {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+      }
     }
   }
 
@@ -43,6 +108,12 @@
     width: 100%;
     padding: 11px 35px;
     margin-left: 16px;
+
+    @include sm-block {
+      max-width: 100%;
+      margin-left: 0;
+      margin-top: 10px;
+    }
   }
 
   &__result {
@@ -54,20 +125,28 @@
     width: 50%;
   }
 
+  &__left {
+    @include sm-block {
+      width: 90%;
+    }
+  }
+
   &__right {
     text-align: right;
     align-self: flex-end;
+    @include sm-block {
+      width: 10%;
+    }
   }
 
   &__edit {
-    font-weight: 900;
-    font-size: 15px;
-    position: relative;
-    text-decoration: none;
-    color: $personal-auto;
-    margin-left: 25px;
-    border-bottom: 0.5px solid #ABABAB;
-    padding-bottom: 3px;
+    @include filter-link;
+
+    & span {
+      @include sm-block {
+        display: none;
+      }
+    }
 
     &:before {
       content: '';
@@ -83,3 +162,4 @@
     }
   }
 }
+
