--- a/src/blocks/components/filter/_filter.scss
+++ b/src/blocks/components/filter/_filter.scss
@@ -4,16 +4,38 @@
   box-sizing: border-box;
   margin-bottom: 34px;
 
+  @include md-block {
+    padding: 15px 12px;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+  @include sm-block {
+    margin-left: -12px;
+    margin-right: -12px;
+  }
+
   &__form {
     display: flex;
     justify-content: space-between;
+    @include md-block {
+      flex-wrap: wrap;
+    }
   }
 
   &__item {
     width: #{calc(100% / 4 - 13px)};
+    @include md-block {
+      width: 100%;
+      margin-bottom: 10px;
+    }
+
 
     &:last-child {
       width: #{calc(100% / 4 - 9px)};
+      @include md-block {
+        width: 100%;
+        margin-bottom: 0;
+      }
     }
   }
 
