--- a/src/blocks/components/social/_social.scss
+++ b/src/blocks/components/social/_social.scss
@@ -2,6 +2,9 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  @include sm-block {
+    justify-content: flex-start;
+  }
 
   &__item {
     position: relative;
@@ -10,7 +13,7 @@
     height: 20px;
     margin-left: 30px;
 
-    :first-child {
+    &:first-child {
       margin-left: 0;
     }
 
