--- a/src/blocks/modules/footer/_footer.scss
+++ b/src/blocks/modules/footer/_footer.scss
@@ -3,6 +3,10 @@
   border-top: 1px solid $footer-border;
   background-color: $white;
 
+  @include lg-block {
+    padding: 40px 0;
+  }
+
   &__top,
   &__bottom {
     @include row-flex();
@@ -10,15 +14,27 @@
 
   &__top {
     margin-bottom: 50px;
+    @include sm-block {
+      margin-bottom: 30px;
+    }
   }
 
   &__hulf {
     @include col();
     @include size(8);
+    @include size-md(6);
+    @include size-sm(12);
+
 
     &:last-child {
       @include size(4);
+      @include size-md(6);
+      @include size-sm(12);
       justify-content: flex-end;
+
+      @include sm-block {
+        justify-content: flex-start;
+      }
     }
   }
 
@@ -27,12 +43,23 @@
     list-style-type: none;
     @include row-flex();
     margin: 0 0 25px;
+    @include lg-block {
+      flex-direction: column;
+    }
 
     & li {
       @include col();
       @include size(3);
       margin: 0;
 
+      @include lg-block {
+        width: 100%;
+        margin-bottom: 20px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
 
       & a {
         font-weight: bold;
@@ -48,11 +75,26 @@
     list-style-type: none;
     @include row-flex();
     margin: 0;
+    @include lg-block {
+      flex-direction: column;
+    }
+    @include sm-block {
+      margin-bottom: 30px;
+    }
 
     & li {
       @include col();
       @include size(3);
       margin: 0;
+
+      @include lg-block {
+        width: 100%;
+        margin-bottom: 20px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
 
       & a {
         font-size: 15px;
@@ -67,6 +109,13 @@
     font-size: 15px;
     color: $footer-color-menu;
   }
+  &__copyright {
+    @include sm-block {
+      margin-bottom: 20px;
+      line-height: 25px;
+    }
+  }
+
 
   &__letsrock {
     display: flex;
@@ -74,6 +123,10 @@
     align-items: center;
     text-align: right;
     text-decoration: none;
+
+    @include sm-block {
+      justify-content: flex-start;
+    }
 
     & img {
       width: 83px;
