--- a/src/blocks/modules/header/header.pug
+++ b/src/blocks/modules/header/header.pug
@@ -19,24 +19,10 @@ header.header
                         include ../../components/personal-area-icon/personal-area-icon
                         a(href="#").button-black.header__ask-question Задать вопрос
                     +personal-auto('Mazda 323 III (BF) 1985 - 1989')
+    include ../../components/mobile-menu/mobile-menu
     .header__menu
         .container
-            nav.header__menu-list
-                a(href="#").header__menu-item
-                    img(src="img/sprites/intermediate-svg/icon-engine.svg", alt="")
-                    span  Двигатель
-                a(href="#").header__menu-item
-                    img(src="img/sprites/intermediate-svg/icon-transmission.svg", alt="")
-                    span  Трансмиссия
-                a(href="#").header__menu-item
-                    img(src="img/sprites/intermediate-svg/icon-car-body.svg", alt="")
-                    span  Кузов
-                a(href="#").header__menu-item
-                    img(src="img/sprites/intermediate-svg/icon-electric.svg", alt="")
-                    span  Электрика
-                a(href="#").header__menu-item
-                    img(src="img/sprites/intermediate-svg/icon-running-system.svg", alt="")
-                    span  Ходовая система
+            include ../../components/menu/menu
 
 
 
