--- a/src/styles/_libs.scss
+++ b/src/styles/_libs.scss
@@ -1,4 +1,6 @@
 @import "vendor/normalize";
 @import "vendor/smart-grid";
 @import "vendor/hamburgers";
+@import "vendor/iziModal";
 @import "../../node_modules/select2/src/scss/core";
+@import "../../node_modules/slick-carousel/slick/slick.scss";
