--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -16,5 +16,7 @@ html(lang="ru")
 				block content
 
 			block footer
-				//include ../../blocks/modules/footer/footer
+				include ../../blocks/modules/footer/footer
+			block modal
+				include ../../blocks/modules/modals/modals
 		include ../includes/scripts
