--- a/src/blocks/components/card/_card.scss
+++ b/src/blocks/components/card/_card.scss
@@ -3,13 +3,7 @@
   width: 100%;
   display: inline-block;
   text-decoration: none;
-  @include xl-block {
-    max-width: #{calc(50% - 20px)};
-  }
 
-  @include sm-block {
-    max-width: 100%;
-  }
 
   &__img {
     position: relative;
@@ -60,13 +54,45 @@
       @include col();
       margin-bottom: 35px;
 
-      @include md-block {
-        margin-bottom: 30px;
-      }
-
+      &:nth-last-child(3),
+      &:nth-last-child(2),
       &:last-child {
         margin-bottom: 0;
       }
+
+      @include xl-block {
+        max-width: #{calc(50% - 20px)};
+
+        &:nth-last-child(3) {
+          margin-bottom: 35px;
+        }
+
+        &:nth-last-child(2),
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+
+
+      @include md-block {
+        margin-bottom: 30px;
+
+
+        &:nth-last-child(3),
+        &:nth-last-child(2) {
+          margin-bottom: 30px;
+        }
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+
+      }
+
+      @include sm-block {
+        max-width: 100%;
+      }
+
 
       & img {
         border-radius: 8px;
