--- a/src/blocks/components/mobile-menu/_mobile-menu.scss
+++ b/src/blocks/components/mobile-menu/_mobile-menu.scss
@@ -1,13 +1,14 @@
 .mobile-menu {
   display: none;
-  position: fixed;
+  position: absolute;
+  top: 55px;
   left: 0;
   background-color: $dark-gray;
   width: 100%;
   height: auto;
   min-height: 100%;
   z-index: 1000;
-  top: 55px;
+  padding-bottom: 20px;
 
   &__main {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
@@ -56,8 +57,15 @@
 
   &__ask-question {
     & .button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       width: 100%;
+      height: 42px;
       max-width: 300px;
+      box-sizing: border-box;
+      padding-top: 0;
+      padding-bottom: 0;
     }
   }
 }
