--- a/src/blocks/modules/header/_header.scss
+++ b/src/blocks/modules/header/_header.scss
@@ -1,5 +1,17 @@
 .header {
   position: relative;
+
+  &.active {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1000;
+    height: 100%;
+    overflow: auto;
+  }
+
   &__inner {
     background-color: $header-bg;
     padding-top: 20px;
