--- a/src/styles/general/_base.scss
+++ b/src/styles/general/_base.scss
@@ -8,11 +8,9 @@ body {
 body {
   font-family: Roboto, sans-serif;
   font-size: 18px;
-  line-height: 30px;
   color: $base-color-text;
   @include md-block {
     font-size: 15px;
-    line-height: 25px;
   }
 }
 
@@ -52,12 +50,12 @@ h3,
 }
 
 main {
-  padding-bottom: 60px;
+  padding-bottom: 50px;
   height: 100%;
   box-sizing: border-box;
 
   @include md-block {
-    padding-bottom: 14px;
+    padding-bottom: 30px;
   }
 
   h1 {
@@ -125,7 +123,11 @@ main {
   }
 
   &__list {
-    margin-bottom: 50px;
+    margin-bottom: 40px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
 
     @include sm-block {
       margin-bottom: 30px;
