--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -7,6 +7,7 @@
 @import "hint/hint";
 @import "card/card";
 @import "card-question/card-question";
+@import "card-slider/card-slider";
 @import "personal-area-icon/personal-area-icon";
 @import "personal-area-head/personal-area-head";
 @import "personal-auto/personal-auto";
@@ -28,3 +29,5 @@
 @import "share/share";
 @import "share-list/share-list";
 @import "question/question";
+@import "video/video";
+@import "slider/slider";
