--- a/src/pages/modals.pug
+++ b/src/pages/modals.pug
@@ -1,1 +1,6 @@
-include ../blocks/modules/modals/modals
+extends ../views/layouts/default
+block variables
+    - var title = 'Модалки';
+
+block content
+    include ../blocks/modules/modals/modals
