--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -18,5 +18,5 @@ html(lang="ru")
 			block footer
 				include ../../blocks/modules/footer/footer
 			block modal
-				include ../../blocks/modules/modals/modals
+				//include ../../blocks/modules/modals/modals
 		include ../includes/scripts
