--- a/src/blocks/components/personal-area-icon/personal-area-icon.pug
+++ b/src/blocks/components/personal-area-icon/personal-area-icon.pug
@@ -1,1 +1,18 @@
-a(href="#").personal-area-icon
+.personal-area-layout.js-sub-menu-layout
+.personal-area-icon
+    a(href="#").js-icon-sub-menu
+    nav.personal-area-sub-menu.js-sub-menu
+        ul
+            li
+                a(href="#") Личные данные
+            li
+                a(href="#") Автомобили
+            li
+                a(href="#") Книга учета ТО
+            li
+                a(href="#") Избранное
+            li
+                a(href="#") Мои вопросы
+            li.exit
+                a(href="#") Выход
+
