Added adaptive personal area head

--- a/src/blocks/components/hint/hint.pug
+++ b/src/blocks/components/hint/hint.pug
@@ -1,3 +1,4 @@
 mixin hint(message)
     .hint ?
-        .hint__message.hide !{message}
+        .hint__message.hide
+            .hint__message-inner !{message}
