--- a/src/blocks/components/personal-area-head/personal-area-head.pug
+++ b/src/blocks/components/personal-area-head/personal-area-head.pug
@@ -11,15 +11,16 @@ include ../hint/hint
         span  Александр
         |!
     ._auto
-        .personal-auto Ваш автомобиль
-        +hint('<p>Если у вас несколько автомобилей - вы можете добавить их в соответствующем разделе на сайте.</p>' +
-        '<p>Для каждого автомобиля:</p>' +
-        '<ul>' +
-        '<li>Индивидуальная Книга учета ТО</li>' +
-        '<li>Материалы из избранного <span>*</span></li>' +
-        '<li>Вопросы и ответы из избранного <span>*</span></li>' +
-        '</ul>' +
-        '<p><span>*</span> <i>если относятся к конкретной марке/модели</i></p>')
+        ._inner
+            .personal-auto Ваш автомобиль
+            +hint('<p>Если у вас несколько автомобилей - вы можете добавить их в соответствующем разделе на сайте.</p>' +
+            '<p>Для каждого автомобиля:</p>' +
+            '<ul>' +
+            '<li>Индивидуальная Книга учета ТО</li>' +
+            '<li>Материалы из избранного <span>*</span></li>' +
+            '<li>Вопросы и ответы из избранного <span>*</span></li>' +
+            '</ul>' +
+            '<p><span>*</span> <i>если относятся к конкретной марке/модели</i></p>')
         from._select
             +select(options, 'personal-auto', 'js-select-gray')
 
