--- a/src/blocks/components/hint/_hint.scss
+++ b/src/blocks/components/hint/_hint.scss
@@ -28,19 +28,43 @@
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     font-size: 13px;
     border-radius: 8px;
-    padding: 30px;
     z-index: 100;
+
+    @include sm-block {
+      top: 40px;
+      left: -134px;
+    }
+
+    @include to(426px) {
+      width: #{calc(100vw - 24px)};
+    }
 
     &:before {
       content: '';
       position: absolute;
-      top: 35px;
-      left: -14px;
-      width: 0;
-      height: 0;
-      border-top: 12px solid transparent;
-      border-right: 14px solid $white;
-      border-bottom: 12px solid transparent;
+      top: 40px;
+      left: -9px;
+      width: 17px;
+      height: 17px;
+      background-color: $white;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+      transform: rotate(45deg);
+      z-index: -1;
+
+      @include sm-block {
+        left: 134px;
+        top: -9px;
+      }
+    }
+
+    &-inner {
+      padding: 30px;
+      background-color: $white;
+      border-radius: 8px;
+
+      @include sm-block {
+        padding: 20px;
+      }
     }
 
     &,
