--- a/src/blocks/components/personal-area-head/_personal-area-head.scss
+++ b/src/blocks/components/personal-area-head/_personal-area-head.scss
@@ -4,22 +4,59 @@
   padding: 37px 40px 28px;
   margin-bottom: 12px;
 
+  @include lg-block {
+    & .personal-auto {
+      height: auto;
+      margin: 0;
+      &:before {
+        content: none;
+      }
+    }
+  }
+
+  @include md-block {
+    padding: 24px 12px 11px;
+  }
+
   &__title {
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
     color: #000000;
     margin-bottom: 20px;
+    line-height: 139%;
+
+    @include md-block {
+      font-size: 18px;
+      margin-bottom: 15px;
+    }
   }
 
   &__auto {
     display: flex;
     align-items: center;
+
+    @include lg-block {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+
+  &__inner {
+    display: flex;
+    margin-bottom: 12px;
   }
 
   &__select {
     margin-left: 25px;
     max-width: 616px;
     width: 100%;
+
+    @include lg-block {
+      margin-left: 0;
+    }
+    @include md-block {
+      max-width: 100%;
+    }
   }
 }
