--- a/src/blocks/modules/personal-area/_personal-area.scss
+++ b/src/blocks/modules/personal-area/_personal-area.scss
@@ -6,6 +6,14 @@
     font-weight: 500;
     font-size: 18px;
     color: $gray;
+
+    @include md-block {
+        padding: 12px 20px;
+    }
+    @include sm-block {
+        padding-left: 12px;
+        padding-right: 12px;
+    }
 }
 
 .personal-area {
@@ -44,6 +52,7 @@
             display: flex;
             justify-content: space-between;
             overflow-x: auto;
+            box-sizing: border-box;
         }
 
         & ul {
@@ -56,8 +65,15 @@
                     border-bottom: 4px solid transparent;
                     padding-bottom: 11px;
 
+                    @include md-block {
+                        padding-bottom: 9px;
+                    }
+
                     &.active {
                         border-bottom: 4px solid $yellow;
+                        @include md-block {
+                            border-bottom-width: 3px;
+                        }
                     }
                 }
             }
@@ -68,6 +84,10 @@
         background-color: $white;
         padding: 45px 40px;
         box-sizing: border-box;
+
+        @include md-block {
+            padding: 26px 12px;
+        }
     }
 
     &__tab-item {
@@ -82,6 +102,11 @@
         margin-top: 15px;
         margin-bottom: 30px;
         font-size: 21px;
+
+        @include sm-block {
+            font-size: 17px;
+            margin-bottom: 15px;
+        }
     }
 
     &__info {
@@ -89,9 +114,17 @@
         width: 100%;
         box-sizing: border-box;
 
+        @include sm-block {
+            max-width: 100%;
+        }
+
         & input {
             margin-bottom: 15px;
             width: 100%;
+
+            @include sm-block {
+                margin-bottom: 10px;
+            }
 
             &:last-child {
                 margin-bottom: 0;
@@ -102,6 +135,11 @@
             max-width: 170px;
             margin-top: 10px;
             width: 100%;
+
+            @include sm-block {
+                margin-top: 0px;
+                max-width: 100%;
+            }
         }
     }
 
